<resources>
    <string name="app_name">cat_codes</string>
    <string name="text_301_error">6949667899 www.google.com anhs@gmail.com The requested resource has been assigned a new permanent URI and any future references to this resource SHOULD use one of the returned URIs. Clients with link editing capabilities ought to automatically re-link references to the Request-URI to one or more of the new references returned by the server, where possible. This response is cacheable unless indicated otherwise. The new permanent URI SHOULD be given by the Location field in the response. Unless the request method was HEAD, the entity of the response SHOULD contain a short hypertext note with a hyperlink to the new URI(s). If the 301 status code is received in response to a request other than GET or HEAD, the user agent MUST NOT automatically redirect the request unless it can be confirmed by the user, since this might change the conditions under which the request was issued. Note: When automatically redirecting a POST request after receiving a 301 status code, some existing HTTP/1.0 user agents will erroneously change it into a GET request.</string>
    <string name="http_301">HTTP 301</string>
    <string name="http_302">HTTP 302</string>
    <string name="text_302_error">The requested resource resides temporarily under a different URI. Since the redirection might be altered on occasion, the client SHOULD continue to use the Request-URI for future requests. This response is only cacheable if indicated by a Cache-Control or Expires header field. The temporary URI SHOULD be given by the Location field in the response. Unless the request method was HEAD, the entity of the response SHOULD contain a short hypertext note with a hyperlink to the new URI(s).</string>
    <string name="http_503">HTTP 503</string>
    <string name="text_503_error">The server is currently unable to handle the request due to a temporary overloading or maintenance of the server. The implication is that this is a temporary condition which will be alleviated after some delay. If known, the length of the delay MAY be indicated in a Retry-After header. If no Retry-After is given, the client SHOULD handle the response as it would for a 500 response. Note: The existence of the 503 status code does not imply that a server must use it when becoming overloaded. Some servers may wish to simply refuse the connection.</string>
    <string name="go_to_error_302">Go to error 302</string>
    <string name="choose_an_error">Choose an error</string>
    <string name="main_menu_cat">main menu cat</string>
    <string name="error_301_picture_text">a lying cat on the beach</string>
    <string name="error_302_picture_text">a cat saved by a firewoman</string>
    <string name="error_503_error_text">a lazy cat in an empty pc monitor</string>
</resources>
